tests/expectations/parser/finalize/finalize_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'function', 'inline', 'program', 'script', 'transition' -- found 'finalize'
    --> test:3:3
     |
   3 | } finalize {
     |   ^^^^^^^^
